--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.7.4
+  shared_preferences: ^0.5.4+6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +34,7 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.7.4
+  shared_preferences: ^0.5.4+6
   flutter_test:
     sdk: flutter
 
@@ -48,7 +50,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    - assets/images/monster/hizume/
+    - assets/images/monster/normal/
+    - assets/images/state/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
